[package]
name = "los"
version = "0.1.0"
authors = ["Hans-Martin Will <hwill@acm.org>"]
edition = "2018"
description = "Library Operating System for Rust"
documentation = "https://docs.rs/los/"
repository= "https://github.com/hmwill/los.rs"
license = "BSD 2-clause"
readme = "README.md"
categories = ["operating system"]
keywords = ["operating system", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
